--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,21 +5,11 @@ on:
 jobs:
   linux:
     runs-on: ubuntu-latest
-    services:
-      redis:
-        image: redis
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 6379:6379
     strategy:
       matrix:
         node-version:
           - 14.15.4
-          - 16.x
+          - 17.x
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -30,6 +20,20 @@ jobs:
         run: npm install
       - name: Run tests
         run: npm test
-        env:
-          REDIS_HOST: 0.0.0.0
-          REDIS_PORT: 6379
+  windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        node-version:
+          - 14.15.4
+          - 17.x
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install
+        run: npm install
+      - name: Run tests
+        run: npm test
