--- a/package.json
+++ b/package.json
@@ -19,22 +19,23 @@
     "@adonisjs/core": "^5.5.0"
   },
   "devDependencies": {
-    "@adonisjs/core": "^5.5.3",
+    "@adonisjs/core": "^5.6.0",
     "@adonisjs/mrm-preset": "^5.0.3",
     "@adonisjs/redis": "^7.1.1",
     "@adonisjs/require-ts": "^2.0.10",
-    "@japa/assert": "^1.3.1",
+    "@japa/assert": "^1.3.2",
+    "@japa/preset-adonis": "^1.0.10",
     "@japa/run-failed-tests": "^1.0.6",
     "@japa/runner": "^2.0.5",
     "@japa/spec-reporter": "^1.1.11",
     "@poppinss/dev-utils": "^2.0.2",
-    "@types/node": "^17.0.22",
+    "@types/node": "^17.0.23",
     "@types/supertest": "^2.0.12",
     "commitizen": "^4.2.4",
     "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.3.0",
     "del-cli": "^4.0.1",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -42,9 +43,9 @@
     "husky": "^7.0.4",
     "mrm": "^4.0.0",
     "np": "^7.6.1",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.1",
     "supertest": "^6.2.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
