--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   },
   "files": [
     "./node_modules/@adonisjs/core/build/adonis-typings/index.d.ts",
+    "./node_modules/@japa/preset-adonis/build/adonis-typings/index.d.ts",
     "./node_modules/@adonisjs/redis/build/adonis-typings/index.d.ts"
   ]
 }
