--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@adonisjs/mrm-preset": "^5.0.3",
     "@adonisjs/redis": "^7.3.1",
     "@adonisjs/require-ts": "^2.0.12",
+    "@japa/api-client": "^1.4.4",
     "@japa/assert": "^1.3.5",
-    "@japa/preset-adonis": "^1.1.1",
+    "@japa/preset-adonis": "^1.2.0",
     "@japa/run-failed-tests": "^1.0.8",
-    "@japa/runner": "^2.1.1",
+    "@japa/runner": "^2.5.1",
     "@japa/spec-reporter": "^1.2.0",
     "@poppinss/dev-utils": "^2.0.3",
     "@types/node": "^18.7.15",
@@ -54,6 +55,7 @@
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
     "test": "node -r @adonisjs/require-ts/build/register ./bin/test.ts",
+    "quick:test": "node -r @adonisjs/require-ts/build/register ./bin/test.ts",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
     "copyfiles": "copyfiles \"templates/**/*.txt\" \"instructions.md\" build",
