--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Session provider for AdonisJS",
   "typings": "./build/adonis-typings/index.d.ts",
   "main": "build/providers/SessionProvider.js",
+  "type": "module",
   "files": [
     "build/adonis-typings",
     "build/providers",
@@ -14,25 +15,34 @@
     "build/instructions.md"
   ],
   "dependencies": {
-    "@poppinss/utils": "^5.0.0",
-    "fs-extra": "^10.1.0"
+    "@poppinss/utils": "6.5.0-3",
+    "fs-extra": "^11.1.1"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^5.8.0"
+    "@adonisjs/core": "6.1.5-8",
+    "@adonisjs/redis": "8.0.0-1"
   },
   "devDependencies": {
-    "@adonisjs/core": "^5.8.6",
+    "@adonisjs/application": "7.1.2-8",
+    "@adonisjs/core": "6.1.5-8",
+    "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/mrm-preset": "^5.0.3",
-    "@adonisjs/redis": "^7.3.1",
+    "@adonisjs/prettier-config": "^1.1.8",
+    "@adonisjs/redis": "8.0.0-1",
     "@adonisjs/require-ts": "^2.0.12",
+    "@adonisjs/tsconfig": "^1.1.8",
+    "@adonisjs/view": "7.0.0-4",
     "@japa/api-client": "^1.4.4",
-    "@japa/assert": "^1.3.5",
-    "@japa/preset-adonis": "^1.2.0",
-    "@japa/run-failed-tests": "^1.0.8",
-    "@japa/runner": "^2.5.1",
-    "@japa/spec-reporter": "^1.2.0",
+    "@japa/assert": "2.0.0-1",
+    "@japa/file-system": "2.0.0-1",
+    "@japa/plugin-adonisjs": "2.0.0-1",
+    "@japa/runner": "3.0.0-6",
+    "@paralleldrive/cuid2": "^2.2.1",
     "@poppinss/dev-utils": "^2.0.3",
+    "@swc/core": "^1.3.69",
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.7.15",
+    "@types/set-cookie-parser": "^2.4.3",
     "@types/supertest": "^2.0.12",
     "commitizen": "^4.2.5",
     "copyfiles": "^2.4.1",
@@ -49,13 +59,14 @@
     "prettier": "^2.7.1",
     "set-cookie-parser": "^2.5.1",
     "supertest": "^6.2.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test": "node -r @adonisjs/require-ts/build/register ./bin/test.ts",
-    "quick:test": "node -r @adonisjs/require-ts/build/register ./bin/test.ts",
+    "test": "c8 npm run quick:test",
+    "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
     "copyfiles": "copyfiles \"templates/**/*.txt\" \"instructions.md\" build",
