--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "@adonisjs/session",
   "version": "6.4.0",
   "description": "Session provider for AdonisJS",
-  "typings": "./build/adonis-typings/index.d.ts",
-  "main": "build/providers/SessionProvider.js",
+  "main": "build/index.js",
   "type": "module",
   "files": [
-    "build/adonis-typings",
-    "build/providers",
     "build/src",
-    "build/config.js",
-    "build/config.d.ts",
-    "build/templates",
-    "build/instructions.md"
+    "build/stubs",
+    "build/providers",
+    "build/index.d.ts",
+    "build/index.js",
+    "build/configure.d.ts",
+    "build/configure.js"
   ],
   "dependencies": {
     "@poppinss/utils": "6.5.0-3",
