--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,10 @@ services:
     ports:
       - 6379:6379
     command: redis-server --appendonly yes
+
+  redis-insight:
+    image: redislabs/redisinsight:latest
+    ports:
+      - 8001:8001
+    environment:
+      - REDIS_URI=redis://redis:6379
