--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@adonisjs/redis": "8.0.0-1",
     "@adonisjs/tsconfig": "^1.1.8",
     "@adonisjs/view": "7.0.0-4",
-    "@japa/api-client": "^1.4.4",
+    "@japa/api-client": "2.0.0-0",
     "@japa/assert": "2.0.0-1",
     "@japa/file-system": "2.0.0-1",
     "@japa/plugin-adonisjs": "2.0.0-1",
