--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@japa/runner": "3.0.0-6",
     "@poppinss/dev-utils": "^2.0.3",
     "@swc/core": "^1.3.70",
-    "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.4.2",
     "@types/set-cookie-parser": "^2.4.3",
     "@types/supertest": "^2.0.12",
@@ -71,8 +70,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@poppinss/utils": "6.5.0-3",
-    "fs-extra": "^11.1.1"
+    "@poppinss/utils": "6.5.0-3"
   },
   "peerDependencies": {
     "@adonisjs/core": "6.1.5-10",
