--- a/package.json
+++ b/package.json
@@ -35,23 +35,20 @@
     "format": "prettier --write .",
     "release": "np",
     "version": "npm run build",
-    "sync-labels": "github-label-sync --labels .github/labels.json adonisjs/ally",
+    "sync-labels": "github-label-sync --labels .github/labels.json adonisjs/session",
     "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts"
   },
   "devDependencies": {
-    "@adonisjs/application": "7.1.2-8",
-    "@adonisjs/core": "6.1.5-10",
+    "@adonisjs/core": "^6.1.5-12",
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
-    "@adonisjs/redis": "8.0.0-3",
+    "@adonisjs/redis": "^8.0.0-7",
     "@adonisjs/tsconfig": "^1.1.8",
-    "@adonisjs/view": "7.0.0-4",
-    "@japa/api-client": "2.0.0-0",
-    "@japa/assert": "2.0.0-1",
-    "@japa/file-system": "2.0.0-1",
-    "@japa/plugin-adonisjs": "2.0.0-1",
-    "@japa/runner": "3.0.0-6",
-    "@poppinss/dev-utils": "^2.0.3",
+    "@japa/api-client": "^2.0.0-0",
+    "@japa/assert": "^2.0.0-1",
+    "@japa/file-system": "^2.0.0-1",
+    "@japa/plugin-adonisjs": "^2.0.0-1",
+    "@japa/runner": "^3.0.0-6",
     "@swc/core": "^1.3.70",
     "@types/node": "^20.4.2",
     "@types/set-cookie-parser": "^2.4.3",
@@ -70,11 +67,11 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@poppinss/utils": "6.5.0-3"
+    "@poppinss/utils": "^6.5.0-5"
   },
   "peerDependencies": {
-    "@adonisjs/core": "6.1.5-10",
-    "@adonisjs/redis": "8.0.0-3"
+    "@adonisjs/core": "^6.1.5-12",
+    "@adonisjs/redis": "^8.0.0-7"
   },
   "peerDependenciesMeta": {
     "@adonisjs/redis": {
