--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,16 +43,6 @@ jobs:
     strategy:
       matrix:
         node-version: [18.16.0, 20.x]
-    services:
-      redis:
-        image: redis
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 6379:6379
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -64,5 +54,4 @@ jobs:
       - name: Run tests
         run: npm test
         env:
-          REDIS_HOST: 0.0.0.0
-          REDIS_PORT: 6379
+          NO_REDIS: true
