--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "build/src",
     "build/stubs",
     "build/providers",
-    "build/index.d.ts",
-    "build/index.js",
     "build/configure.d.ts",
-    "build/configure.js"
+    "build/configure.js",
+    "build/index.d.ts",
+    "build/index.js"
   ],
   "exports": {
     ".": "./build/index.js",
     "./session_provider": "./build/providers/session_provider.js",
     "./session_middleware": "./build/src/session_middleware.js",
+    "./client": "./build/src/client.js",
     "./types": "./build/src/types.js"
   },
   "scripts": {
@@ -42,13 +43,14 @@
     "@adonisjs/core": "^6.1.5-12",
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
-    "@adonisjs/redis": "^8.0.0-7",
+    "@adonisjs/redis": "^8.0.0-8",
     "@adonisjs/tsconfig": "^1.1.8",
     "@japa/api-client": "^2.0.0-0",
     "@japa/assert": "^2.0.0-1",
     "@japa/file-system": "^2.0.0-1",
     "@japa/plugin-adonisjs": "^2.0.0-1",
     "@japa/runner": "^3.0.0-6",
+    "@japa/snapshot": "^2.0.0-1",
     "@swc/core": "^1.3.70",
     "@types/node": "^20.4.2",
     "@types/set-cookie-parser": "^2.4.3",
@@ -121,7 +123,9 @@
     ],
     "exclude": [
       "tests/**",
-      "stubs/**"
+      "stubs/**",
+      "factories/**",
+      "bin/**"
     ]
   }
 }
