--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "c8 npm run quick:test",
+    "test": "cross-env NODE_DEBUG=adonisjs:session c8 npm run quick:test",
     "clean": "del-cli build",
     "typecheck": "tsc --noEmit",
     "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
@@ -57,6 +57,7 @@
     "@types/supertest": "^2.0.12",
     "c8": "^8.0.0",
     "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "eslint": "^8.45.0",
     "github-label-sync": "^2.3.1",
