--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts"
   },
   "devDependencies": {
+    "@adonisjs/assembler": "^6.1.3-18",
     "@adonisjs/core": "^6.1.5-18",
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
