--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^6.1.3-18",
-    "@adonisjs/core": "^6.1.5-19",
+    "@adonisjs/core": "^6.1.5-21",
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
     "@adonisjs/redis": "^8.0.0-10",
@@ -60,6 +60,7 @@
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
+    "edge.js": "^6.0.0-8",
     "eslint": "^8.47.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
@@ -74,14 +75,15 @@
     "@poppinss/utils": "^6.5.0-5"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.1.5-19",
-    "@adonisjs/redis": "^8.0.0-10"
+    "@adonisjs/core": "^6.1.5-21",
+    "@adonisjs/redis": "^8.0.0-10",
+    "edge.js": "^6.0.0-8"
   },
   "peerDependenciesMeta": {
     "@adonisjs/redis": {
       "optional": true
     },
-    "@japa/api-client": {
+    "edge.js": {
       "optional": true
     }
   },
