--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build/src",
     "build/stubs",
     "build/providers",
+    "build/factories",
     "build/configure.d.ts",
     "build/configure.js",
     "build/index.d.ts",
