--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "./factories": "./build/factories/main.js",
     "./session_provider": "./build/providers/session_provider.js",
     "./session_middleware": "./build/src/session_middleware.js",
-    "./plugin_edge": "./build/src/edge_plugin_adonisjs_session.js",
+    "./plugins/edge": "./build/src/plugins/edge.js",
+    "./plugins/api_client": "./build/src/plugins/japa/api_client.js",
+    "./plugins/browser_client": "./build/src/plugins/japa/browser_client.js",
     "./client": "./build/src/client.js",
     "./types": "./build/src/types.js"
   },
@@ -51,6 +53,7 @@
     "@adonisjs/tsconfig": "^1.1.8",
     "@japa/api-client": "^2.0.0-0",
     "@japa/assert": "^2.0.0-1",
+    "@japa/browser-client": "^2.0.0-3",
     "@japa/file-system": "^2.0.0-1",
     "@japa/plugin-adonisjs": "^2.0.0-1",
     "@japa/runner": "^3.0.0-6",
@@ -70,6 +73,7 @@
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
+    "playwright": "^1.38.0",
     "prettier": "^3.0.2",
     "set-cookie-parser": "^2.6.0",
     "supertest": "^6.3.3",
@@ -82,6 +86,8 @@
   "peerDependencies": {
     "@adonisjs/core": "^6.1.5-22",
     "@adonisjs/redis": "^8.0.0-10",
+    "@japa/api-client": "^2.0.0-0",
+    "@japa/browser-client": "^2.0.0-3",
     "edge.js": "^6.0.0-8"
   },
   "peerDependenciesMeta": {
@@ -89,6 +95,12 @@
       "optional": true
     },
     "edge.js": {
+      "optional": true
+    },
+    "@japa/api-client": {
+      "optional": true
+    },
+    "@japa/browser-client": {
       "optional": true
     }
   },
