--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@japa/plugin-adonisjs": "^2.0.0-1",
     "@japa/runner": "^3.0.0-6",
     "@japa/snapshot": "^2.0.0-1",
-    "@swc/core": "^1.3.78",
+    "@swc/core": "1.3.82",
     "@types/node": "^20.6.0",
     "@types/set-cookie-parser": "^2.4.3",
     "@types/supertest": "^2.0.12",
