--- a/package.json
+++ b/package.json
@@ -45,30 +45,30 @@
     "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^6.1.3-18",
-    "@adonisjs/core": "^6.1.5-24",
+    "@adonisjs/assembler": "^6.1.3-25",
+    "@adonisjs/core": "^6.1.5-28",
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
-    "@adonisjs/redis": "^8.0.0-10",
+    "@adonisjs/redis": "^8.0.0-11",
     "@adonisjs/tsconfig": "^1.1.8",
-    "@japa/api-client": "^2.0.0-0",
-    "@japa/assert": "^2.0.0-1",
-    "@japa/browser-client": "^2.0.0-3",
-    "@japa/file-system": "^2.0.0-1",
-    "@japa/plugin-adonisjs": "^2.0.0-1",
-    "@japa/runner": "^3.0.0-6",
-    "@japa/snapshot": "^2.0.0-1",
+    "@japa/api-client": "^2.0.0",
+    "@japa/assert": "^2.0.0",
+    "@japa/browser-client": "^2.0.0",
+    "@japa/file-system": "^2.0.0",
+    "@japa/plugin-adonisjs": "^2.0.0-3",
+    "@japa/runner": "^3.0.3",
+    "@japa/snapshot": "^2.0.0",
     "@swc/core": "1.3.82",
-    "@types/node": "^20.6.0",
-    "@types/set-cookie-parser": "^2.4.3",
-    "@types/supertest": "^2.0.12",
+    "@types/node": "^20.8.7",
+    "@types/set-cookie-parser": "^2.4.4",
+    "@types/supertest": "^2.0.14",
     "@vinejs/vine": "^1.6.0",
     "c8": "^8.0.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "edge.js": "^6.0.0-8",
-    "eslint": "^8.49.0",
+    "eslint": "^8.51.0",
     "get-port": "^7.0.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
@@ -81,13 +81,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@poppinss/utils": "^6.5.0-5"
+    "@poppinss/utils": "^6.5.0"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.1.5-22",
-    "@adonisjs/redis": "^8.0.0-10",
-    "@japa/api-client": "^2.0.0-0",
-    "@japa/browser-client": "^2.0.0-3",
+    "@adonisjs/core": "^6.1.5-28",
+    "@adonisjs/redis": "^8.0.0-11",
+    "@japa/api-client": "^2.0.0",
+    "@japa/browser-client": "^2.0.0",
     "edge.js": "^6.0.0-8"
   },
   "peerDependenciesMeta": {
