--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@japa/assert": "^2.0.0",
     "@japa/browser-client": "^2.0.0",
     "@japa/file-system": "^2.0.0",
-    "@japa/plugin-adonisjs": "^2.0.0-3",
+    "@japa/plugin-adonisjs": "^2.0.0",
     "@japa/runner": "^3.0.4",
     "@japa/snapshot": "^2.0.0",
     "@swc/core": "1.3.82",
