--- a/package.json
+++ b/package.json
@@ -45,50 +45,50 @@
     "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^6.1.3-25",
-    "@adonisjs/core": "^6.1.5-28",
-    "@adonisjs/eslint-config": "^1.1.8",
-    "@adonisjs/prettier-config": "^1.1.8",
-    "@adonisjs/redis": "^8.0.0-11",
-    "@adonisjs/tsconfig": "^1.1.8",
-    "@japa/api-client": "^2.0.0",
-    "@japa/assert": "^2.0.0",
-    "@japa/browser-client": "^2.0.0",
-    "@japa/file-system": "^2.0.0",
-    "@japa/plugin-adonisjs": "^2.0.0",
-    "@japa/runner": "^3.0.4",
-    "@japa/snapshot": "^2.0.0",
-    "@swc/core": "1.3.82",
-    "@types/node": "^20.8.7",
-    "@types/set-cookie-parser": "^2.4.4",
-    "@types/supertest": "^2.0.14",
-    "@vinejs/vine": "^1.6.0",
+    "@adonisjs/assembler": "^6.1.3-28",
+    "@adonisjs/core": "^6.1.5-32",
+    "@adonisjs/eslint-config": "^1.1.9",
+    "@adonisjs/prettier-config": "^1.1.9",
+    "@adonisjs/redis": "^8.0.0-13",
+    "@adonisjs/tsconfig": "^1.1.9",
+    "@japa/api-client": "^2.0.1",
+    "@japa/assert": "^2.0.1",
+    "@japa/browser-client": "^2.0.1",
+    "@japa/file-system": "^2.0.1",
+    "@japa/plugin-adonisjs": "^2.0.1",
+    "@japa/runner": "^3.1.0",
+    "@japa/snapshot": "^2.0.3",
+    "@swc/core": "^1.3.99",
+    "@types/node": "^20.9.5",
+    "@types/set-cookie-parser": "^2.4.7",
+    "@types/supertest": "^2.0.16",
+    "@vinejs/vine": "^1.7.0",
     "c8": "^8.0.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
-    "edge.js": "^6.0.0-8",
-    "eslint": "^8.51.0",
+    "edge.js": "^6.0.0",
+    "eslint": "^8.54.0",
     "get-port": "^7.0.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
-    "playwright": "^1.38.0",
-    "prettier": "^3.0.2",
+    "playwright": "^1.40.0",
+    "prettier": "^3.1.0",
     "set-cookie-parser": "^2.6.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@poppinss/utils": "^6.5.0"
+    "@poppinss/utils": "^6.5.1"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.1.5-28",
-    "@adonisjs/redis": "^8.0.0-11",
-    "@japa/api-client": "^2.0.0",
-    "@japa/browser-client": "^2.0.0",
-    "edge.js": "^6.0.0-8"
+    "@adonisjs/core": "^6.1.5-32",
+    "@adonisjs/redis": "^8.0.0-13",
+    "@japa/api-client": "^2.0.1",
+    "@japa/browser-client": "^2.0.1",
+    "edge.js": "^6.0.0"
   },
   "peerDependenciesMeta": {
     "@adonisjs/redis": {
