--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "cross-env NODE_DEBUG=adonisjs:session c8 npm run quick:test",
     "clean": "del-cli build",
     "typecheck": "tsc --noEmit",
-    "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
+    "copy:templates": "copyfiles \"stubs/**/*.stub\" --up=\"1\" build",
     "precompile": "npm run lint && npm run clean",
     "compile": "tsup-node && tsc --emitDeclarationOnly --declaration",
     "postcompile": "npm run copy:templates",
@@ -77,7 +77,7 @@
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.2"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@poppinss/utils": "^6.5.1"
