--- a/package.json
+++ b/package.json
@@ -43,50 +43,50 @@
     "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^6.1.3-28",
-    "@adonisjs/core": "^6.1.5-32",
-    "@adonisjs/eslint-config": "^1.1.9",
-    "@adonisjs/prettier-config": "^1.1.9",
-    "@adonisjs/redis": "^8.0.0-13",
-    "@adonisjs/tsconfig": "^1.1.9",
-    "@japa/api-client": "^2.0.1",
-    "@japa/assert": "^2.0.1",
-    "@japa/browser-client": "^2.0.1",
-    "@japa/file-system": "^2.0.1",
+    "@adonisjs/assembler": "^7.0.0-1",
+    "@adonisjs/core": "^6.1.5-36",
+    "@adonisjs/eslint-config": "^1.2.0",
+    "@adonisjs/prettier-config": "^1.2.0",
+    "@adonisjs/redis": "^8.0.0-14",
+    "@adonisjs/tsconfig": "^1.2.0",
+    "@japa/api-client": "^2.0.2",
+    "@japa/assert": "^2.1.0",
+    "@japa/browser-client": "^2.0.2",
+    "@japa/file-system": "^2.1.1",
     "@japa/plugin-adonisjs": "^2.0.1",
-    "@japa/runner": "^3.1.0",
-    "@japa/snapshot": "^2.0.3",
-    "@swc/core": "^1.3.99",
-    "@types/node": "^20.9.5",
+    "@japa/runner": "^3.1.1",
+    "@japa/snapshot": "^2.0.4",
+    "@swc/core": "^1.3.101",
+    "@types/node": "^20.10.5",
     "@types/set-cookie-parser": "^2.4.7",
-    "@types/supertest": "^2.0.16",
+    "@types/supertest": "^6.0.1",
     "@vinejs/vine": "^1.7.0",
     "c8": "^8.0.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "edge.js": "^6.0.0",
-    "eslint": "^8.54.0",
+    "eslint": "^8.56.0",
     "get-port": "^7.0.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
-    "np": "^8.0.4",
-    "playwright": "^1.40.0",
-    "prettier": "^3.1.0",
+    "np": "^9.2.0",
+    "playwright": "^1.40.1",
+    "prettier": "^3.1.1",
     "set-cookie-parser": "^2.6.0",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
-    "typescript": "5.2.2"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@poppinss/utils": "^6.5.1"
+    "@poppinss/utils": "^6.7.0"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.1.5-32",
-    "@adonisjs/redis": "^8.0.0-13",
-    "@japa/api-client": "^2.0.1",
-    "@japa/browser-client": "^2.0.1",
+    "@adonisjs/core": "^6.1.5-36",
+    "@adonisjs/redis": "^8.0.0-14",
+    "@japa/api-client": "^2.0.2",
+    "@japa/browser-client": "^2.0.2",
     "edge.js": "^6.0.0"
   },
   "peerDependenciesMeta": {
