--- a/package.json
+++ b/package.json
@@ -43,29 +43,29 @@
     "quick:test": "node --enable-source-maps --loader=ts-node/esm bin/test.ts"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^7.0.0-1",
-    "@adonisjs/core": "^6.1.5-36",
-    "@adonisjs/eslint-config": "^1.2.0",
-    "@adonisjs/prettier-config": "^1.2.0",
-    "@adonisjs/redis": "^8.0.0-14",
-    "@adonisjs/tsconfig": "^1.2.0",
+    "@adonisjs/assembler": "^7.0.0",
+    "@adonisjs/core": "^6.2.0",
+    "@adonisjs/eslint-config": "^1.2.1",
+    "@adonisjs/prettier-config": "^1.2.1",
+    "@adonisjs/redis": "^8.0.0",
+    "@adonisjs/tsconfig": "^1.2.1",
     "@japa/api-client": "^2.0.2",
     "@japa/assert": "^2.1.0",
     "@japa/browser-client": "^2.0.2",
     "@japa/file-system": "^2.1.1",
-    "@japa/plugin-adonisjs": "^2.0.1",
+    "@japa/plugin-adonisjs": "^3.0.0",
     "@japa/runner": "^3.1.1",
     "@japa/snapshot": "^2.0.4",
-    "@swc/core": "^1.3.101",
-    "@types/node": "^20.10.5",
+    "@swc/core": "^1.3.102",
+    "@types/node": "^20.10.7",
     "@types/set-cookie-parser": "^2.4.7",
-    "@types/supertest": "^6.0.1",
+    "@types/supertest": "^6.0.2",
     "@vinejs/vine": "^1.7.0",
-    "c8": "^8.0.0",
+    "c8": "^9.0.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
-    "edge.js": "^6.0.0",
+    "edge.js": "^6.0.1",
     "eslint": "^8.56.0",
     "get-port": "^7.0.0",
     "github-label-sync": "^2.3.1",
@@ -83,11 +83,11 @@
     "@poppinss/utils": "^6.7.0"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.1.5-36",
-    "@adonisjs/redis": "^8.0.0-14",
+    "@adonisjs/core": "^6.2.0",
+    "@adonisjs/redis": "^8.0.0",
     "@japa/api-client": "^2.0.2",
     "@japa/browser-client": "^2.0.2",
-    "edge.js": "^6.0.0"
+    "edge.js": "^6.0.1"
   },
   "peerDependenciesMeta": {
     "@adonisjs/redis": {
