--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adonisjs/session",
   "description": "Session provider for AdonisJS",
-  "version": "7.0.0-15",
+  "version": "7.0.0",
   "engines": {
     "node": ">=18.16.0"
   },
