--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@adonisjs/assembler": "^7.2.3",
     "@adonisjs/core": "^6.3.1",
     "@adonisjs/eslint-config": "^1.3.0",
+    "@adonisjs/i18n": "^2.0.1",
     "@adonisjs/prettier-config": "^1.3.0",
     "@adonisjs/redis": "^8.0.1",
     "@adonisjs/tsconfig": "^1.3.0",
