--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.7.0",
-    "@adonisjs/core": "^6.9.1",
+    "@adonisjs/core": "^6.12.1",
     "@adonisjs/eslint-config": "^1.3.0",
     "@adonisjs/i18n": "^2.1.0",
     "@adonisjs/prettier-config": "^1.3.0",
-    "@adonisjs/redis": "^8.0.1",
+    "@adonisjs/redis": "^9.1.0",
     "@adonisjs/tsconfig": "^1.3.0",
     "@japa/api-client": "^2.0.3",
     "@japa/assert": "^3.0.0",
@@ -57,12 +57,12 @@
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
     "@japa/snapshot": "^2.0.5",
-    "@swc/core": "^1.5.25",
-    "@types/node": "^20.14.1",
-    "@types/set-cookie-parser": "^2.4.7",
+    "@swc/core": "^1.6.5",
+    "@types/node": "^20.14.7",
+    "@types/set-cookie-parser": "^2.4.9",
     "@types/supertest": "^6.0.2",
     "@vinejs/vine": "^2.1.0",
-    "c8": "^9.1.0",
+    "c8": "^10.1.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
@@ -71,14 +71,14 @@
     "get-port": "^7.1.0",
     "github-label-sync": "^2.3.1",
     "husky": "^9.0.11",
-    "np": "^10.0.5",
+    "np": "^10.0.6",
     "playwright": "^1.44.1",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.2",
     "set-cookie-parser": "^2.6.0",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2"
   },
   "dependencies": {
     "@poppinss/macroable": "^1.0.2",
@@ -86,7 +86,7 @@
   },
   "peerDependencies": {
     "@adonisjs/core": "^6.6.0",
-    "@adonisjs/redis": "^8.0.1",
+    "@adonisjs/redis": "^8.0.1 || ^9.0.0",
     "@japa/api-client": "^2.0.3",
     "@japa/browser-client": "^2.0.3",
     "edge.js": "^6.0.2"
